modified:   index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <td>
         <h1>ORJI MICHEAL</h1>
         <p ><em>web developer and<strong><a href="https://www.techopedia.com/definition/4813/programmer"> programmer</a></strong></em></p>
-        <p class="one">I am a ios developer and a computer scientist . My research focuses on algorithms and networks, the roles they play in large-scale social and information systems, and their broader societal implications</p>
+        <p class="one"> My research focuses on algorithms and networks, the roles they play in large-scale social and information systems, and their broader societal implications</p>
         <hr>
       </td>
     </tr>
