--- a/class work.html
+++ b/class work.html
@@ -1,21 +1,16 @@
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="new file.css">
+    <link rel="stylesheet" href="class work.css">
 </head>
-
 <body>
-    <section class="program">
-
-        <div class="top box"></div>
-        <div class="middle box"></div>
-        <div class="bottom box"></div>
-
-    </section>
+  <div  style="width: 100px; height: 100px; background-color: yellow; position: absolute;" ></div>
+  
+  
+  
 </body>
-
+<script src="new.js"></script>
 </html>
