--- a/index.html
+++ b/index.html
@@ -40,6 +40,36 @@
 
     </div>
   </section>
+  </div>
+  </section>
+  <section>
+    <h1 class="set">SERVICES</h1>
+    <div class="arr">
+      <div class="uno">
+        <img src="cart-icon-28351.png" class="cart" alt="cart">
+        <h1 class="ok"> WEB DEVELOPMENT</h1>
+        <p class="ko">React, Nextjs, Wordpress, Bootstrap and<br>
+          Ruby on rails</p>
+      </div>
+      <div>
+        <img src="computer.jpg" class="can">
+        <h1 class="ook">GRAPHICS DESIGN</h1>
+        <p class="koo">Application UI/UX designs, Social media banners <br>
+          Logo designs</p>
+
+      </div>
+
+
+    </div>
+
+
+  </section>
+
+
+</body>
+<script src="java.js"></script>
+
+</html>
 </body>
 
 </html>
