--- a/index.html
+++ b/index.html
@@ -64,6 +64,31 @@
 
 
   </section>
+  <section>
+    <h1 class="save">SKILLS</h1>
+    <div class="SEEM">
+      <div>
+        <P>HTML/REACT</P>
+        <P>REACT</P>
+        <P>SQL</P>
+      </div>
+      <div>
+        <P>JAVASCRIPT</P>
+        <P>NODE.JS</P>
+        <P>MONGODB</P>
+      </div>
+      <div>
+        <P>PHP</P>
+        <P>RUBY ON RAILS</P>
+        <P>WORDPRESS</P>
+      </div>
+    </div>
+
+
+  </section>
+  <section class="real">
+
+  </section>
 
 
 </body>
