--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
       <img src="orji.png" alt="" class="logobox">
       <img src="white-menu-icon-2.jpg" class="menu_img">
       <ul>
-        <li><a href="">HOME</a></li>
-        <li><a href="">SERVICES</a></li>
-        <li><a href="">SKILLS</a></li>
-        <li><a href="">CONTACT</a></li>
+        <li><a href="#sec1">HOME</a></li>
+        <li><a href="#sec2">SERVICES</a></li>
+        <li><a href="#sec3">SKILLS</a></li>
+        <li><a href="#sec4">CONTACT</a></li>
       </ul>
+
 
 
     </nav>
 
   </header>
 
-  <section class="bin">
+  <section id="sec1" class="bin">
     <div class="PROJECT">
       <P>
       <h1>I'M ORJI MICHEAL</h1>
@@ -40,9 +41,9 @@
 
     </div>
   </section>
-  </div>
-  </section>
-  <section>
+
+
+  <section id="sec2">
     <h1 class="set">SERVICES</h1>
     <div class="arr">
       <div class="uno">
@@ -64,7 +65,7 @@
 
 
   </section>
-  <section>
+  <section id='sec3'>
     <h1 class="save">SKILLS</h1>
     <div class="SEEM">
       <div>
@@ -86,9 +87,62 @@
 
 
   </section>
-  <section class="real">
+  <section id="sec4" class="contact">
+    <div>
+      <div class="row">
+        <h1 class="con"> CONTACT ME</h1>
+      </div>
+      <div class="row">
+        <div class="sui">
+          <form action="mailto:orjimicheal133@gmail.com" method="post" enctype="text/plain">
+            <div class="row">
+              <div class="sont">
+                <div class="box"><input class="pass" type="text" id="fname" name="firstname" placeholder="Your name..">
+                </div>
 
+                <div class="box"><input class="pass" type="email" id="email" name="email" placeholder="Your email..">
+                </div>
+
+                <div class="box"><input class="pass" type="number" id="phone" name="phone" placeholder="Your phone..">
+                </div>
+              </div>
+              <div class="sont">
+                <textarea class="passt" id="subject" name="subject" placeholder="Write something.."></textarea>
+              </div>
+
+
+              <div class="toper"><button class="btn" id="sendMessageButton" type="submit">SEND MESSAGE</button></div>
+
+            </div>
+
+          </form>
+        </div>
+      </div>
+    </div>
   </section>
+  <footer>
+    <div class="container">
+      <div class="rin">
+        <div class="end">
+          <span class="copyright">Copyright&nbsp;© Orji Micheal 2023</span>
+        </div>
+        <div class="end">
+          <ul class="saan">
+            <li class="links">
+              <a href="https://www.instagram.com/michael___orji/">
+                <img src="/instagram.png"></a>
+            </li>
+            <li class="links">
+              <a href="https://web.facebook.com/profile
+              .php?id=100093173760863"><img src="/4202867_facebook_icon.png" s></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="end i"></div>
+      </div>
+    </div>
+  </footer>
 
 
 </body>
